--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.7",
+    "get-google-fonts": "^1.2.2",
     "gsap": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
